--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
